# bluebeam-pdf-converter

./: .gitignore  CLAUDE.md  README.md
.claude/: PRD.md  errors.md  memories.md  recommended-workflow.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/models/: __init__.py  annotation.py  mapping.py  pdf_file.py  tuner.py
backend/app/routers/: __init__.py  convert.py  download.py  tuner.py  upload.py
backend/app/services/: __init__.py  annotation_replacer.py  appearance_extractor.py  btx_loader.py  file_manager.py  icon_config.py  icon_override_store.py  icon_renderer.py  layer_manager.py  mapping_parser.py  pdf_parser.py  pdf_reconstructor.py  subject_extractor.py
backend/app/utils/: __init__.py  errors.py  validation.py
backend/data/: icon_overrides.json  mapping.md
backend/scripts/: diagnose_annotations.py  diagnose_group_properties.py  run_icon_tuner.py  test_batch_clone.py  test_bbox_variants.py  test_clone_icon.py  test_conversion.py  test_icon_render.py  test_mr36h_icon.py  test_single_icon.py  validate_fix.py
backend/scripts/icon_tuner/: __init__.py  auto_tuner.py  icon_comparator.py  reference_extractor.py  region_config.py
backend/tests/: __init__.py  test_annotation_replacer.py  test_api.py  test_btx_loader.py  test_file_manager.py  test_icon_override_store.py  test_icon_renderer.py  test_layer_manager.py  test_mapping_parser.py  test_pdf_parser.py  test_subject_extractor.py  test_tuner_api.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+113 files in other folders)
